Fixed double overflow to the best of my ablity atm. This could use a proper rewrite based on probably future requirements.

--- a/Tessin.Bladerunner/Themes/Sass/controls/_filter-panel.scss
+++ b/Tessin.Bladerunner/Themes/Sass/controls/_filter-panel.scss
@@ -1,30 +1,29 @@
 .filter-panel {
-    margin-top: -($panel-margin+$blade-header-height);
-    margin-left: -$panel-margin;
-    margin-right: -$panel-margin;
-    height: 100vh;
-
+  margin-left: -$panel-margin;
+  margin-right: -$panel-margin;
 }
 
-.filter-panel--container 
-{
-    background-color:blue;
-    height: 100%;
-    margin-top:($blade-header-height);
-    box-sizing: padding-box;
+.filter-panel--container {
+  background-color: blue;
+  height: 100%;
 }
 
 .filter-panel--header {
-    margin-top:40px;
-    background-color:fuchsia;
-    padding: $panel-margin;
-    border-bottom: 1px solid red;
+  margin-top: 40px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: fuchsia;
+  width: calc(100% - 37px);
+  padding: $panel-margin;
 }
 
 .filter-panel--body {
-    padding-right: $panel-margin;
-    padding-left: $panel-margin;
-    padding-top: $panel-margin;
-    overflow-y: auto;
-    height:100%;
+  padding-right: $panel-margin;
+  padding-left: $panel-margin;
+  margin-top: 50px;
+  padding-bottom: $panel-margin;
+  height: 100%;
 }
